--- a/P01_Caldwell_Scheidler/P01_Caldwell_Scheidler/Properties/Resources.resx
+++ b/P01_Caldwell_Scheidler/P01_Caldwell_Scheidler/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="Desktop Computer" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Desktop Computer.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Computer Monitor" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Computer Monitor.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
